中蒙国境の変更

--- a/localisation/english/_map/_geacps_state_names_l_english.yml
+++ b/localisation/english/_map/_geacps_state_names_l_english.yml
@@ -67,12 +67,12 @@
  STATE_66:0 "ドルヌィ・シロンスク"
  STATE_67:0 "ゴルヌィ・シロンスク"
  STATE_68:0 "ルブシュ"
- STATE_69:0 "ウースチー"	#ドイツ語: アウシヒ
- STATE_70:0 "スロヴァキア西部"
- STATE_71:0 "スロヴァキア東部"
+ STATE_69:0 "ウースチー"
+ STATE_70:0 "スロバキア西部"
+ STATE_71:0 "スロバキア東部"
  STATE_72:0 "ザオルジェ"
  STATE_73:0 "ザカルパッチャ"
- STATE_74:0 "オパヴァ"	#ドイツ語: トロッパウ
+ STATE_74:0 "オパヴァ"
  STATE_75:0 "モラヴィア"
  STATE_76:0 "北トランシルヴァニア"
  STATE_77:0 "南ドブロジャ"
@@ -83,7 +83,7 @@
  STATE_82:0 "バナト"
  STATE_83:0 "クリシャナ"
  STATE_84:0 "トランシルヴァニア"
- STATE_85:0 "グダニスク"	#ドイツ語: ダンツィヒ
+ STATE_85:0 "グダニスク"
  STATE_86:0 "ポズナン"
  STATE_87:0 "ウッチ"
  STATE_88:0 "クラクフ"
@@ -461,7 +461,7 @@
  STATE_460:0 "コンスタンティーヌ"
  STATE_461:0 "カサブランカ"
  STATE_462:0 "マラケシュ"
- STATE_463:0 "南中部"
+ STATE_463:0 "アラスカ南中部"
  STATE_464:0 "ノバスコシア"
  STATE_465:0 "ニューブランズウィック"
  STATE_466:0 "ケベック"
@@ -629,7 +629,7 @@
  STATE_628:0 "セブ"
  STATE_629:0 "布哇諸島"
  STATE_630:0 "ジョンストン環礁"
- STATE_631:0 "水無月島"
+ STATE_631:0 "中ノ鳥島"
  STATE_632:0 "大鳥島"
  STATE_633:0 "マーシャル諸島"
  STATE_634:0 "ソロモン諸島"
@@ -662,7 +662,7 @@
  STATE_661:0 "トリポリタニア"
  STATE_662:0 "スルト"
  STATE_663:0 "キレナイカ"
- STATE_664:0 "スロヴァキア南部"
+ STATE_664:0 "スロバキア南部"
  STATE_665:0 "ガベス"
  STATE_666:0 "ラップランド"
  STATE_667:0 "バリ"
@@ -885,7 +885,7 @@
  STATE_884:0 "遵義"
  STATE_885:0 "銅仁"
  STATE_886:0 "アンデス低地"
- STATE_887:0 "内陸部"
+ STATE_887:0 "アラスカ内陸部"
  STATE_888:0 "チュミカン"
  STATE_889:0 "ユダヤ"
  STATE_890:0 "アマザル"
@@ -1085,8 +1085,8 @@
  STATE_1084:0 "温州"
  STATE_1085:0 "タリハ"
  STATE_1086:0 "タラパカ"
- STATE_1087:0 "南東部"
- STATE_1088:0 "南西部"
+ STATE_1087:0 "アラスカ南東部"
+ STATE_1088:0 "アラスカ南西部"
  STATE_1089:0 "砂漠地帯"
  STATE_1090:0 "西トーゴ"
  STATE_1091:0 "アンドラ"
@@ -1105,7 +1105,7 @@
  STATE_1104:0 "ヴァレー"
  STATE_1105:0 "リュクサンブール"
  STATE_1106:0 "オストカントネ"
-#STATE_1107:0 ""
+ STATE_1107:0 "	ヒーウマー島"
  STATE_1108:0 "フランドル・フランセーズ"
  STATE_1109:0 "東マケドニア"
  STATE_1110:0 "道北"
@@ -1115,13 +1115,13 @@
  STATE_1114:0 "マドハー"
  STATE_1115:0 "ソコトラ"
  STATE_1116:0 "セントルシア"
-#STATE_1117:0 ""
+ STATE_1117:0 "セントビンセント島及びグレナディーン諸島"
  STATE_1118:0 "マルティニーク"
-#STATE_1119:0 ""
-#STATE_1120:0 ""
- STATE_1121:0 "ヘプ"	#独語: エーガー
- STATE_1122:0 "シュマヴァ"	#独語: ベーマーヴァルトガウ
- STATE_1123:0 "ズノイモ"	#独語: ツナイム
+ STATE_1119:0 "ドミニカ島"
+ STATE_1120:0 "アンギラ島"
+ STATE_1121:0 "ヘプ"
+ STATE_1122:0 "シュマヴァ"
+ STATE_1123:0 "ズノイモ"
  STATE_1124:0 "北カタルーニャ"
  STATE_1125:0 "カヤー東部"
  STATE_1126:0 "チャイントン"
@@ -1175,15 +1175,15 @@
  STATE_1174:0 "北ベンガル"
  STATE_1175:0 "東ベンガル"
  STATE_1176:0 "マグウェ"
- STATE_1177:0 "北カチン東部"	#江心坡東部(中語)
- STATE_1178:0 "北カチン西部"	#江心坡中部(中語)
- STATE_1179:0 "ナガ北部"	#江心坡西部(中語)
+ STATE_1177:0 "北カチン東部"
+ STATE_1178:0 "北カチン西部"
+ STATE_1179:0 "ナガ北部"
  STATE_1180:0 "ナガ南部"
  STATE_1181:0 "カムティ"
  STATE_1182:0 "マトマン"
  STATE_1183:0 "ホパン"
  STATE_1184:0 "ラウカイ"
- STATE_1185:0 "ナムカム"	#南坎
+ STATE_1185:0 "ナムカム"
  STATE_1186:0 "ナムサン"
  STATE_1187:0 "ピンダヤ"
  STATE_1188:0 "シーサイン"
@@ -1220,20 +1220,20 @@
  STATE_1219:0 "テンブロン"
  STATE_1220:0 "ジャージー"
  STATE_1221:0 "ビエケス島"
- STATE_1222:0 "クレブラ島"	#英: スネーク
+ STATE_1222:0 "クレブラ島"
  STATE_1223:0 "セント・トーマス島"
  STATE_1224:0 "セント・ジョン島"
  STATE_1225:0 "セント・クロイ島"
  STATE_1226:0 "トルトラ島"
  STATE_1227:0 "ヴァージン・ゴルダ島"
-#STATE_1228:0 ""
+ STATE_1228:0 "アネガダ島"
  STATE_1229:0 "ヨスト・ヴァン・ダイク島"
  STATE_1230:0 "モントセラト島"
  STATE_1231:0 "アルバ島"
  STATE_1232:0 "ボネール島"
- STATE_1233:0 "島"
- STATE_1234:0 "島"
- STATE_1235:0 "島"
+ STATE_1233:0 "サン・バルテルミー島"
+ STATE_1234:0 "セント・マーチン島南部"
+ STATE_1235:0 "セント・マーチン島北部"
  STATE_1236:0 "バーレーン"
  STATE_1237:0 "シェパード諸島"
  STATE_1238:0 "ジュビー岬"
@@ -1316,3 +1316,8 @@
  STATE_1315:0 "チャコ北西部"
  STATE_1316:0 "チャコ北部"
  STATE_1317:0 "ポンタ・ポーラン南部"
+ STATE_1318:0 "ダジークアニクン"
+ STATE_1319:0 "西ハンギ"
+ STATE_1320:0 "ハンギ"
+ STATE_1321:0 "ザミンウード"
+ STATE_1322:0 "ダリガンガ"
