--- a/localisation/english/_map/_geacps_state_names_native_l_english.yml
+++ b/localisation/english/_map/_geacps_state_names_native_l_english.yml
@@ -59,8 +59,8 @@ l_english:
  STATE_39_de:0 "ズュートティロル"
  STATE_39_fr:0 "トレンティン＝オート・アディジェ"
  STATE_42_en:0 "パラティネート"
-#STATE_42_fr:0 ""
-#STATE_45_hu:0 ""
+ STATE_42_fr:0 "パラティナ・レナー"
+ STATE_45_hu:0 "バーチュカ"
  STATE_46_tr:0 "ムンテニヤ"
  STATE_47_el:0 "ステレア・エラス"
  STATE_48_tr:0 "ソフヤ"
@@ -103,6 +103,12 @@ l_english:
  STATE_67_fr:0 "オート・シレシー"
  STATE_67_cs:0 "ホルニ―・スレスコ"
  STATE_67_hu:0 "アルソー・シレージア"
+ 
+ STATE_69_de:0 "アウシヒ"
+ 
+ STATE_74_de:0 "トロッパウ"
+ 
+ STATE_85_de:0 "ダンツィヒ"
  
  STATE_115_en:0 "シシリー"
  STATE_115_es:0 "シシリア"
@@ -147,6 +153,27 @@ l_english:
  
  STATE_880_fr:0 "ヴァレー・ダオスト"
  
+ STATE_887_ja:0 "新須賀内陸部"
+ 
  STATE_989_ja:0 "華府"
+ 
+ STATE_1082_ja:0 "翠玉島"
+ 
+ STATE_1087:0 "新須賀南東部"
+ STATE_1088:0 "新須賀南西部"
+ 
+ STATE_1121_de:0 "エーガー"
+ STATE_1122_de:0 "ベーマーヴァルトガウ"
+ STATE_1123_de:0 "ツナイム"
+ 
+ STATE_1177_ch:0 "江心坡東部"
+ STATE_1178_ch:0 "江心坡中部"
+ STATE_1179_ch:0 "江心坡西部"
+ 
+ STATE_1185_ch:0 "南坎"
+ 
+ STATE_1222_en:0 "スネーク"
+ 
+ STATE_1233_en:0 "セント・バーツ島"
  
  STATE_1239_ru:0 "ニコラエフスク・ナ・アムーレ"
