陣営脱退機能の除去

--- a/localisation/english/_map/_geacps_state_names_native_l_english.yml
+++ b/localisation/english/_map/_geacps_state_names_native_l_english.yml
@@ -159,8 +159,8 @@ l_english:
  
  STATE_1082_ja:0 "翠玉島"
  
- STATE_1087:0 "新須賀南東部"
- STATE_1088:0 "新須賀南西部"
+ STATE_1087_ja:0 "新須賀南東部"
+ STATE_1088_ja:0 "新須賀南西部"
  
  STATE_1121_de:0 "エーガー"
  STATE_1122_de:0 "ベーマーヴァルトガウ"
