--- a/localisation/english/countries_europe/geacps_FRA_l_english.yml
+++ b/localisation/english/countries_europe/geacps_FRA_l_english.yml
@@ -356,14 +356,17 @@
  GEACPS_NF_FRA_178_desc_:0 "徴兵プロパガンダを実施し軍を拡大する。"
  GEACPS_NF_FRA_179:0 "ソ連との戦争"
  GEACPS_NF_FRA_179_desc:0 "ソ連との戦争はもはや秒読みの段階に入っている。ならば我らが先に戦端を開き先制攻撃を行うのだ！"
- 
+
 #国民精神
  FRA_de_gaulle_regime:0 "ド・ゴール体制"
  FRA_fighting_france:0 "戦うフランス"
  FRA_monet_plan:0 "モネ・プラン"
  FRA_purge_against_the_collaboraturs:0 "コラボラトゥールに対する粛清"
  FRA_our_dearest_enemy:0 "我々の最も親愛なる敵"
+
+#ディシジョン
  
+
 #イベント
  GEACPS_france.1:0 "敗北の上の勝利"
  GEACPS_france_title.1:0 "敗北の上の勝利"
