--- a/localisation/english/countries_europe/geacps_ROM_l_english.yml
+++ b/localisation/english/countries_europe/geacps_ROM_l_english.yml
@@ -1,9 +1,13 @@
 ﻿l_english:
 #国家方針
+ 
 
 #国民精神
  ROM_department_of_state_security:0 "セクリターテ"
  ROM_Michael_I_In_Exile:0 "ミハイ1世の亡命"
+
+#ディシジョン
+ 
 
 #イベント
  geacps_ROM.1.t:0 "12月革命"
