--- a/localisation/english/countries_europe/geacps_SIC_l_english.yml
+++ b/localisation/english/countries_europe/geacps_SIC_l_english.yml
@@ -62,7 +62,7 @@
  SIC_Fleet_Modernization_desc:0 ""
  SIC_Mediterranean_Fleet:0 "地中海艦隊"
  SIC_Mediterranean_Fleet_desc:0 ""
- 
+
 #国民精神
  SIC_idea_Traditional_Industry:0"伝統的な産業"
  SIC_idea_Traditional_Industry_desc:0 ""
@@ -74,5 +74,8 @@
  SIC_idea_Tightening_Crackdowns_desc:0 ""
  SIC_idea_Student_Support:0 "学生への支援"
  SIC_idea_Student_Support_desc:0 ""
+
+#ディシジョン
  
+
 #イベント
