--- a/localisation/english/countries_europe/geacps_HUN_l_english.yml
+++ b/localisation/english/countries_europe/geacps_HUN_l_english.yml
@@ -1,9 +1,13 @@
 ﻿l_english:
 #国家方針
  
+
 #国民精神
  HUN_state_protection_authority:0 "PRO"
  HUN_Miklos_Horthy_In_Exile:0 "”ヴィテーズ”の亡命"
+
+#ディシジョン
+ 
 
 #イベント
  HUN.0.t:0 "ドナウ連邦構想"
