--- a/localisation/english/countries_europe/geacps_ITA_l_english.yml
+++ b/localisation/english/countries_europe/geacps_ITA_l_english.yml
@@ -1,6 +1,12 @@
 ﻿l_english:
 #国家方針
  
+
 #国民精神
  ITA_torino_agreement:0 "トリノ協定"
  ITA_national_liberation_committee:0 "国民解放委員会"
+
+#ディシジョン
+ 
+
+#イベント
