--- a/localisation/english/countries_europe/geacps_POL_l_english.yml
+++ b/localisation/english/countries_europe/geacps_POL_l_english.yml
@@ -1,10 +1,15 @@
 ﻿l_english:
 #国家方針
  
+
 #国民精神
  POL_ministry_of_public_security:0 "MBP"
 
+#ディシジョン
+ 
+
 #イベント
+ 
 
 #dynamic_modifier
  POL_German_resistance_strong_modifier:0 "ドイツ人反抗勢力は§R強く抵抗している§!"
