--- a/localisation/english/_map/countries_cosmetic_l_english.yml
+++ b/localisation/english/_map/countries_cosmetic_l_english.yml
@@ -394,6 +394,10 @@
  RUSandBLR_union_state_DEF:0 "ロシア及びベラルーシ連合国"
  RUSandBLR_union_state_ADJ:0 "ロシア・ベラルーシ"
  
+ SAR_state_government:0 "ザールラント州政府"
+ SAR_state_government_DEF:0 "ザールラント州政府"
+ SAR_state_government_ADJ:0 "ザールラント"
+ 
  SERandMNT_state_union:0 "セルビア及びモンテネグロ国家連合"
  SERandMNT_state_union_DEF:0 "セルビア及びモンテネグロ国家連合"
  SERandMNT_state_union_ADJ:0 "セルビア・モンテネグロ"
