パプアとニューギニアの追加と教会国のステート変更

--- a/localisation/english/_map/_geacps_state_names_l_english.yml
+++ b/localisation/english/_map/_geacps_state_names_l_english.yml
@@ -521,7 +521,7 @@
  STATE_520:0 "北オーストラリア"
  STATE_521:0 "クイーンズランド"
  STATE_522:0 "西オーストラリア"
- STATE_523:0 "東ニューギニア"
+ STATE_523:0 "ニューギニア"
  STATE_524:0 "台北"
  STATE_525:0 "京城"
  STATE_526:0 "沖縄諸島"
@@ -1295,7 +1295,7 @@
  STATE_1294:0 "南東スラウェシ"
  STATE_1295:0 "南スラウェシ"
  STATE_1296:0 "西スラウェシ"
- STATE_1297:0 "イリアンジャヤ"
+ STATE_1297:0 "北イリアンジャヤ"
  STATE_1298:0 "ウィーン"
  STATE_1299:0 "中部"
  STATE_1300:0 "コンポンチャム"
@@ -1321,3 +1321,10 @@
  STATE_1320:0 "ハンギ"
  STATE_1321:0 "ザミンウード"
  STATE_1322:0 "ダリガンガ"
+ STATE_1323:0 "パプア"
+ STATE_1324:0 "パプア内陸部"
+ STATE_1325:0 "ニューギニア内陸部"
+ STATE_1326:0 "南イリアンジャヤ"
+ STATE_1327:0 "北イリアンジャヤ内陸部"
+ STATE_1328:0 "南イリアンジャヤ内陸部"
+ STATE_1329:0 "ブーゲンビル"
