--- a/localisation/english/_map/countries_colony_l_english.yml
+++ b/localisation/english/_map/countries_colony_l_english.yml
@@ -2749,6 +2749,18 @@
  NFK_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  NFK_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
+ NGU_dominion:0 "$NONIDEOLOGY$自治領"
+ NGU_dominion_DEF:0 "$NONIDEOLOGY$自治領"
+ NGU_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
+ NGU_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
+ NGU_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ NGU_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ NGU_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ NGU_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ NGU_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ NGU_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ NGU_mandate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ 
  NMR_dominion:0 "$NONIDEOLOGY$自治領"
  NMR_dominion_DEF:0 "$NONIDEOLOGY$自治領"
  NMR_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
@@ -2760,6 +2772,15 @@
  NMR_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
  NMR_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
  NMR_mandate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ 
+ PAP_dominion:0 "$NONIDEOLOGY$自治領"
+ PAP_dominion_DEF:0 "$NONIDEOLOGY$自治領"
+ PAP_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
+ PAP_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
+ PAP_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ PAP_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ PAP_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ PAP_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  PCN_dominion:0 "ピトケアン、ヘンダーソン、デュシー及びオエノ諸島自治領"
  PCN_dominion_DEF:0 "ピトケアン、ヘンダーソン、デュシー及びオエノ諸島自治領"
