--- a/localisation/english/_map/countries_cosmetic_l_english.yml
+++ b/localisation/english/_map/countries_cosmetic_l_english.yml
@@ -137,9 +137,9 @@
  TRANSCAUCASIAN_democratic_federative_republic_DEF:0 "トランスコーカサス民主連邦共和国"
  TRANSCAUCASIAN_democratic_federative_republic_ADJ:0 "トランスコーカサス"
  
- YELLOWRUSIA_republic:0 "黄ロシア共和国"
- YELLOWRUSIA_republic_DEF:0 "黄ロシア共和国"
- YELLOWRUSIA_republic_ADJ:0 "黄ロシア"
+ YELLOWRUSSIA_republic:0 "黄ロシア共和国"
+ YELLOWRUSSIA_republic_DEF:0 "黄ロシア共和国"
+ YELLOWRUSSIA_republic_ADJ:0 "黄ロシア"
  
 #ヨーロッパ
  AUS-HUN_monarchy:0 "オーストリア諸邦ならびに神聖なるハンガリーのイシュトヴァーン王冠の諸邦"
