--- a/localisation/english/_map/countries_l_english.yml
+++ b/localisation/english/_map/countries_l_english.yml
@@ -1686,6 +1686,10 @@
  NFK_DEF:0 "ノーフォーク"
  NFK_ADJ:0 "ノーフォーク"
  
+ NGU:0 "ニューギニア"
+ NGU_DEF:0 "ニューギニア"
+ NGU_ADJ:0 "ニューギニア"
+ 
  NIU:0 "ニウエ"
  NIU_DEF:0 "ニウエ"
  NIU_ADJ:0 "ニウエ"
@@ -1693,6 +1697,10 @@
  NMR:0 "ナウル"
  NMR_DEF:0 "ナウル"
  NMR_ADJ:0 "ナウル"
+ 
+ PAP:0 "パプア"
+ PAP_DEF:0 "パプア"
+ PAP_ADJ:0 "パプア"
  
  PCN:0 "ピトケアン"
  PCN_DEF:0 "ピトケアン"
