--- a/localisation/english/_map/countries_long_l_english.yml
+++ b/localisation/english/_map/countries_long_l_english.yml
@@ -2196,11 +2196,17 @@
  NFK_republic:0 "ノーフォーク共和国"
  NFK_republic_DEF:0 "ノーフォーク共和国"
  
+ NGU_republic:0 "ニューギニア共和国"
+ NGU_republic_DEF:0 "ニューギニア共和国"
+ 
  NIU_republic:0 "ニウエ共和国"
  NIU_republic_DEF:0 "ニウエ共和国"
  
  NMR_republic:0 "ナウル共和国"
  NMR_republic_DEF:0 "ナウル共和国"
+ 
+ PAP_republic:0 "パプア共和国"
+ PAP_republic_DEF:0 "パプア共和国"
  
  PCN_republic:0 "ピトケアン共和国"
  PCN_republic_DEF:0 "ピトケアン共和国"
