陣営関連汎用イベントの追加

--- a/localisation/english/_map/_geacps_factions_l_english.yml
+++ b/localisation/english/_map/_geacps_factions_l_english.yml
@@ -25,4 +25,9 @@
  faction.1.d:0 "[FROM.GetAdjective]が[ROOT.GetFactionName]に加盟の打診をしてきた。"
  faction.1.0:0 "仲間は多い方が良いからな"
  faction.1.1:0 "それは我々の利益となるのかね？"
- 
+ faction.2.t:0 "[FROM.GetAdjective]が受諾"
+ faction.2.d:0 "[FROM.GetAdjective]が受諾する旨を打診をしてきた。"
+ faction.2.0:0 "喜ばしいな。"
+ faction.3.t:0 "[FROM.GetAdjective]が拒否"
+ faction.3.d:0 "[FROM.GetAdjective]が受諾しない旨を打診をしてきた。"
+ faction.3.0:0 "んな馬鹿な……"
