--- a/localisation/english/countries_asia/geacps_CHI_l_english.yml
+++ b/localisation/english/countries_asia/geacps_CHI_l_english.yml
@@ -1,5 +1,6 @@
 ﻿l_english:
 #国家方針
+ 
 
 #国民精神
  CHI_war_of_17_years:0 "17年間の戦争"
@@ -16,7 +17,12 @@
  CHI_changed_capital_twice_desc:0 "この国は南京のみならず武漢も失った。"
  CHI_small_support_from_USA:0 "米国からのささやかな支援"
  CHI_small_support_from_USA_desc:0 "米国は我々がこの大陸で覇権を取ることを望み、支援を行っている。いや、正確には行っていた。"
+
+#ディシジョン
+ 
+
 #イベント
+ 
 
 #ツールチップ
  CHI_kind_peace:0 "寛容な講和"
