--- a/localisation/english/countries_asia/geacps_FEA_l_english.yml
+++ b/localisation/english/countries_asia/geacps_FEA_l_english.yml
@@ -111,7 +111,7 @@
  FEA_Navy_Military_Advisor_desc:0 "我々の海軍は再建されたばかりで運用方法もよくわかっていない。\n幸いにも海軍大国である日本が近隣に存在するため、海軍軍事顧問を依頼してみよう。"
  FEA_Navy_marines:0 "海兵隊を組織"
  FEA_Navy_marines_desc:0 "海兵隊は上陸に最適なだけでなく渡河攻撃でも威力を発揮する。我が軍はこれを配備する必要がある。"
- 
+
 #国民精神
  FEA_president_system:0 "総統制"
  FEA_work_poor:0 "仕事を得た貧困層"
@@ -120,3 +120,8 @@
  FEA_bomber:0 "爆撃機生産に注力"
  FEA_Standardization_idea:0 "装備の規格化"
  FEA_staff_idea:0 "参謀本部"
+
+#ディシジョン
+ 
+
+#イベント
