--- a/localisation/english/countries_asia/geacps_INS_l_english.yml
+++ b/localisation/english/countries_asia/geacps_INS_l_english.yml
@@ -6,3 +6,11 @@
  INS_indonesia_raya_desc:0 "インドネシア・ラヤ"
  INS_four_leaf_clover:0 "四葉のクローバー"
  INS_four_leaf_clover_desc:0 "四葉のクローバー"
+
+#国民精神
+ 
+
+#ディシジョン
+ 
+
+#イベント
