--- a/localisation/english/countries_asia/geacps_JOR_l_english.yml
+++ b/localisation/english/countries_asia/geacps_JOR_l_english.yml
@@ -1,6 +1,13 @@
 ﻿l_english:
 #国家方針
  JOR_signing_london_treaty:0 "ロンドン条約の締結"
+
+#国民精神
+ 
+
+#ディシジョン
+ 
+
 #イベント
  JOR.0.t:0 "ロンドン条約締結"
  JOR.0.d:0 "本日ロンドンにてイギリス、トランスヨルダン間で条約が締結された。\n条約の内容はトランスヨルダンの独立であったが完全な独立とは言えない内容である。"
