政府体制のアイディア追加

--- a/localisation/english/_map/_geacps_autonomy_system_l_english.yml
+++ b/localisation/english/_map/_geacps_autonomy_system_l_english.yml
@@ -20,7 +20,9 @@
  junior_partner_colony:0 "植民地"
  junior_partner_state:0 "同君連合下位国"
  leased_territory:0 "租借地"
- mandate:0 "委任統治領"
+ mandated_territory_A:0 "A式委任統治領"
+ mandated_territory_B:0 "B式委任統治領"
+ mandated_territory_C:0 "C式委任統治領"
  occupied_territory:0 "占領地"
  princely_state:0 "藩王国"
  trust_territories:0 "信託統治領"
