--- a/localisation/english/_map/countries_colony_l_english.yml
+++ b/localisation/english/_map/countries_colony_l_english.yml
@@ -307,9 +307,12 @@
  LEB_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  LEB_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  LEB_protected_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- LEB_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- LEB_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- LEB_mandate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ LEB_mandated_territory_B:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ LEB_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ LEB_mandated_territory_B_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ LEB_mandated_territory_C:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ LEB_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ LEB_mandated_territory_C_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  MAL_dominion:0 "$NONIDEOLOGY$自治領"
  MAL_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -376,9 +379,15 @@
  PAL_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  PAL_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  PAL_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- PAL_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- PAL_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- PAL_mandate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ PAL_mandated_territory_A:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ PAL_mandated_territory_A_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ PAL_mandated_territory_A_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ PAL_mandated_territory_B:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ PAL_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ PAL_mandated_territory_B_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ PAL_mandated_territory_C:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ PAL_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ PAL_mandated_territory_C_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  PHI_dominion:0 "$NONIDEOLOGY$自治領"
  PHI_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -433,15 +442,21 @@
  SYR_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  SYR_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  SYR_protected_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- SYR_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- SYR_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- SYR_autonomous_states_federation_FRA_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$自治国連邦"
- SYR_autonomous_states_federation_FRA_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$自治国連邦"
- SYR_republic_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$共和国"
- SYR_republic_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$共和国"
- SYR_state_FRA_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$国"
- SYR_state_FRA_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$国"
- SYR_mandate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ SYR_mandated_territory_A:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ SYR_mandated_territory__ADEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ SYR_autonomous_states_federation_FRA_mandated_territory_A:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$自治国連邦"
+ SYR_autonomous_states_federation_FRA_mandated_territory_A_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$自治国連邦"
+ SYR_republic_mandated_territory_A:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$共和国"
+ SYR_republic_mandated_territory_A_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$共和国"
+ SYR_state_FRA_mandated_territory_A:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$国"
+ SYR_state_FRA_mandated_territory_A_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$国"
+ SYR_mandated_territory_A_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ SYR_mandated_territory_B:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ SYR_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ SYR_mandated_territory_B_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ SYR_mandated_territory_C:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ SYR_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ SYR_mandated_territory_C_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  TAJ_soviet_member_republic:0 "タジク・$OVERLORDADJ$共和国"
  TAJ_soviet_member_republic_DEF:0 "タジク・$OVERLORDADJ$共和国"
@@ -825,9 +840,12 @@
  BRD_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  BRD_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  BRD_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- BRD_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- BRD_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- BRD_mandate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ BRD_mandated_territory_B:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ BRD_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ BRD_mandated_territory_B_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ BRD_mandated_territory_C:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ BRD_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ BRD_mandated_territory_C_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  CAR_dominion:0 "$NONIDEOLOGY$自治領"
  CAR_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -867,12 +885,18 @@
  CMR_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  CMR_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  CMR_protected_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- CMR_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- CMR_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- CMR_mandate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- CMR_ENG-GBR_mandate:0 "$OVERLORDADJ$委任統治領カメルーン地域"
- CMR_ENG-GBR_mandate_DEF:0 "$OVERLORDADJ$委任統治領カメルーン地域"
- CMR_ENG-GBR_mandate_ADJ:0 "$OVERLORDADJ$領カメルーン"
+ CMR_mandated_territory_B:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ CMR_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ CMR_mandated_territory_B_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ CMR_ENG-GBR_mandated_territory_B:0 "$OVERLORDADJ$委任統治領カメルーン地域"
+ CMR_ENG-GBR_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領カメルーン地域"
+ CMR_ENG-GBR_mandated_territory_B_ADJ:0 "$OVERLORDADJ$領カメルーン"
+ CMR_mandated_territory_B:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ CMR_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ CMR_mandated_territory_C_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ CMR_ENG-GBR_mandated_territory_C:0 "$OVERLORDADJ$委任統治領カメルーン地域"
+ CMR_ENG-GBR_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領カメルーン地域"
+ CMR_ENG-GBR_mandated_territory_C_ADJ:0 "$OVERLORDADJ$領カメルーン"
  
  COG_dominion:0 "$NONIDEOLOGY$自治領"
  COG_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -1137,9 +1161,12 @@
  NMB_overseas_territory:0 "$OVERLORDADJ$領南西アフリカ"
  NMB_overseas_territory_DEF:0 "$OVERLORDADJ$領南西アフリカ"
  NMB_overseas_territory_ADJ:0 "$OVERLORDADJ$領南西アフリカ"
- NMB_mandate:0 "$OVERLORDADJ$委任統治領南西アフリカ地域"
- NMB_mandate_DEF:0 "$OVERLORDADJ$委任統治領南西アフリカ地域"
- NMB_mandate_ADJ:0 "$OVERLORDADJ$領南西アフリカ"
+ NMB_mandated_territory_B:0 "$OVERLORDADJ$委任統治領南西アフリカ地域"
+ NMB_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領南西アフリカ地域"
+ NMB_mandated_territory_B_ADJ:0 "$OVERLORDADJ$領南西アフリカ"
+ NMB_mandated_territory_C:0 "$OVERLORDADJ$委任統治領南西アフリカ地域"
+ NMB_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領南西アフリカ地域"
+ NMB_mandated_territory_C_ADJ:0 "$OVERLORDADJ$領南西アフリカ"
  
  RWA_dominion:0 "$NONIDEOLOGY$自治領"
  RWA_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -1179,9 +1206,12 @@
  SOM_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  SOM_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  SOM_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- SOM_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGYADJ$地域"
- SOM_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGYADJ$地域"
- SOM_mandate_ADJ:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGYADJ$"
+ SOM_mandated_territory_B:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGYADJ$地域"
+ SOM_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGYADJ$地域"
+ SOM_mandated_territory_B_ADJ:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGYADJ$"
+ SOM_mandated_territory_C:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGYADJ$地域"
+ SOM_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGYADJ$地域"
+ SOM_mandated_territory_C_ADJ:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGYADJ$"
  
  SUD_dominion:0 "$NONIDEOLOGY$自治領"
  SUD_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -1212,9 +1242,12 @@
  TOG_overseas_territory:0 "$OVERLORDADJ$領トーゴランド"
  TOG_overseas_territory_DEF:0 "$OVERLORDADJ$領トーゴランド"
  TOG_overseas_territory_ADJ:0 "$OVERLORDADJ$領トーゴランド"
- TOG_mandate:0 "$OVERLORDADJ$委任統治領トーゴランド地域"
- TOG_mandate_DEF:0 "$OVERLORDADJ$委任統治領トーゴランド地域"
- TOG_mandate_ADJ:0 "$OVERLORDADJ$領トーゴランド"
+ TOG_mandated_territory_B:0 "$OVERLORDADJ$委任統治領トーゴランド地域"
+ TOG_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領トーゴランド地域"
+ TOG_mandated_territory_B_ADJ:0 "$OVERLORDADJ$領トーゴランド"
+ TOG_mandated_territory_C:0 "$OVERLORDADJ$委任統治領トーゴランド地域"
+ TOG_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領トーゴランド地域"
+ TOG_mandated_territory_C_ADJ:0 "$OVERLORDADJ$領トーゴランド"
  
  TUN_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  TUN_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
@@ -1576,11 +1609,16 @@
  FSM_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  FSM_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  FSM_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- FSM_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- FSM_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- FSM_JAP_mandate:0 "$OVERLORDADJ$委任統治領南洋諸島"
- FSM_JAP_mandate_DEF:0 "$OVERLORDADJ$委任統治領南洋諸島"
- FSM_mandate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ FSM_mandated_territory_B:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ FSM_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ FSM_JAP_mandated_territory_B:0 "$OVERLORDADJ$委任統治領南洋諸島"
+ FSM_JAP_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領南洋諸島"
+ FSM_mandated_territory_B_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ FSM_mandated_territory_C:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ FSM_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ FSM_JAP_mandated_territory_C:0 "$OVERLORDADJ$委任統治領南洋諸島"
+ FSM_JAP_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領南洋諸島"
+ FSM_mandated_territory_C_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  FSM_imperial_member:0 "$OVERLORDADJ$領南洋諸島連邦"
  FSM_imperial_member_DEF:0 "$OVERLORDADJ$領南洋諸島連邦"
  FSM_imperial_member_ADJ:0 "$OVERLORDADJ$領南洋諸島"
@@ -1645,9 +1683,12 @@
  NZL_imperial_overseas_territory_DEF:0 "$OVERLORDADJ$領青照亜羅亜"
  NZL_imperial_overseas_territory_ADJ:0 "$OVERLORDADJ$領青照亜羅亜"
  
- PNG_mandate:0 "$OVERLORDADJ$委任統治領パプア及びニューギニア地域"
- PNG_mandate_DEF:0 "$OVERLORDADJ$委任統治領パプア及びニューギニア地域"
- PNG_mandate_ADJ:0 "$OVERLORDADJ$領パプア及びニューギニア"
+ PNG_mandated_territory_B:0 "$OVERLORDADJ$委任統治領パプア及びニューギニア地域"
+ PNG_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領パプア及びニューギニア地域"
+ PNG_mandated_territory_B_ADJ:0 "$OVERLORDADJ$領パプア及びニューギニア"
+ PNG_mandated_territory_C:0 "$OVERLORDADJ$委任統治領パプア及びニューギニア地域"
+ PNG_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領パプア及びニューギニア地域"
+ PNG_mandated_territory_C_ADJ:0 "$OVERLORDADJ$領パプア及びニューギニア"
  
  SAM_dominion:0 "$NONIDEOLOGY$自治領"
  SAM_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -1657,9 +1698,12 @@
  SAM_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  SAM_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  SAM_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
- SAM_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- SAM_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- SAM_mandate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ SAM_mandated_territory_B:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ SAM_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ SAM_mandated_territory_B_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ SAM_mandated_territory_C:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ SAM_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ SAM_mandated_territory_C_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  SAM_us_commonwealth:0 "$OVERLORDADJ$領$NONIDEOLOGY$自治連邦区"
  SAM_us_commonwealth_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$自治連邦区"
  SAM_us_commonwealth_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
@@ -2201,9 +2245,12 @@
  R-U_overseas_territory:0 "$OVERLORDADJ$領ルアンダ＝ウルンディ"
  R-U_overseas_territory_DEF:0 "$OVERLORDADJ$領ルアンダ＝ウルンディ"
  R-U_overseas_territory_ADJ:0 "$OVERLORDADJ$領ルアンダ＝ウルンディ"
- R-U_mandate:0 "$OVERLORDADJ$委任統治領ルアンダ＝ウルンディ地域"
- R-U_mandate_DEF:0 "$OVERLORDADJ$委任統治領ルアンダ＝ウルンディ地域"
- R-U_mandate_ADJ:0 "$OVERLORDADJ$領ルアンダ＝ウルンディ"
+ R-U_mandated_territory_B:0 "$OVERLORDADJ$委任統治領ルアンダ＝ウルンディ地域"
+ R-U_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領ルアンダ＝ウルンディ地域"
+ R-U_mandated_territory_B_ADJ:0 "$OVERLORDADJ$領ルアンダ＝ウルンディ"
+ R-U_mandated_territory_C:0 "$OVERLORDADJ$委任統治領ルアンダ＝ウルンディ地域"
+ R-U_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領ルアンダ＝ウルンディ地域"
+ R-U_mandated_territory_C_ADJ:0 "$OVERLORDADJ$領ルアンダ＝ウルンディ"
  
  REU_dominion:0 "$NONIDEOLOGY$自治領"
  REU_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -2299,9 +2346,12 @@
  TAN_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  TAN_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  TAN_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- TAN_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- TAN_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- TAN_mandate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ TAN_mandated_territory_B:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ TAN_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ TAN_mandated_territory_B_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ TAN_mandated_territory_C:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ TAN_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ TAN_mandated_territory_C_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  TRP_dominion:0 "$NONIDEOLOGY$自治領"
  TRP_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -2332,9 +2382,12 @@
  WTG_overseas_territory:0 "$OVERLORDADJ$領トーゴランド"
  WTG_overseas_territory_DEF:0 "$OVERLORDADJ$領トーゴランド"
  WTG_overseas_territory_ADJ:0 "$OVERLORDADJ$領トーゴランド"
- WTG_mandate:0 "$OVERLORDADJ$委任統治領トーゴランド地域"
- WTG_mandate_DEF:0 "$OVERLORDADJ$委任統治領トーゴランド地域"
- WTG_mandate_ADJ:0 "$OVERLORDADJ$領トーゴランド"
+ WTG_mandated_territory_B:0 "$OVERLORDADJ$委任統治領トーゴランド地域"
+ WTG_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領トーゴランド地域"
+ WTG_mandated_territory_B_ADJ:0 "$OVERLORDADJ$領トーゴランド"
+ WTG_mandated_territory_C:0 "$OVERLORDADJ$委任統治領トーゴランド地域"
+ WTG_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領トーゴランド地域"
+ WTG_mandated_territory_C_ADJ:0 "$OVERLORDADJ$領トーゴランド"
  
  ZAN_dominion:0 "$NONIDEOLOGY$自治領"
  ZAN_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -2757,9 +2810,12 @@
  NGU_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  NGU_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  NGU_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- NGU_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- NGU_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- NGU_mandate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ NGU_mandated_territory_B:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ NGU_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ NGU_mandated_territory_B_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ NGU_mandated_territory_C:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ NGU_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ NGU_mandated_territory_C_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  NMR_dominion:0 "$NONIDEOLOGY$自治領"
  NMR_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -2769,9 +2825,12 @@
  NMR_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  NMR_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  NMR_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- NMR_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- NMR_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- NMR_mandate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ NMR_mandated_territory_B:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ NMR_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ NMR_mandated_territory_B_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ NMR_mandated_territory_C:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ NMR_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ NMR_mandated_territory_C_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  PAP_dominion:0 "$NONIDEOLOGY$自治領"
  PAP_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -2858,12 +2917,12 @@
  STRAITS_ENG-GBR_colony_DEF:0 "$OVERLORDADJ$領海峡植民地"
  STRAITS_ENG-GBR_colony_ADJ:0 "$OVERLORDADJ$領海峡植民地"
  
- TRANSJORDAN_emirate_mandate:0 "$OVERLORDADJ$委任統治領トランスヨルダン首長国"
- TRANSJORDAN_emirate_mandate_DEF:0 "$OVERLORDADJ$委任統治領トランスヨルダン首長国"
- TRANSJORDAN_emirate_mandate_ADJ:0 "$OVERLORDADJ$領トランスヨルダン"
- TRANSJORDAN_hashemite_kingdom_mandate:0 "$OVERLORDADJ$委任統治領トランスヨルダン・ハシミテ王国"
- TRANSJORDAN_hashemite_kingdom_mandate_DEF:0 "$OVERLORDADJ$委任統治領トランスヨルダン・ハシミテ王国"
- TRANSJORDAN_hashemite_kingdom_mandate_ADJ:0 "$OVERLORDADJ$委任統治領トランスヨルダン"
+ TRANSJORDAN_emirate_mandated_territory_A:0 "$OVERLORDADJ$委任統治領トランスヨルダン首長国"
+ TRANSJORDAN_emirate_mandated_territory_A_DEF:0 "$OVERLORDADJ$委任統治領トランスヨルダン首長国"
+ TRANSJORDAN_emirate_mandated_territory_A_ADJ:0 "$OVERLORDADJ$領トランスヨルダン"
+ TRANSJORDAN_hashemite_kingdom_mandated_territory_A:0 "$OVERLORDADJ$委任統治領トランスヨルダン・ハシミテ王国"
+ TRANSJORDAN_hashemite_kingdom_mandated_territory_A_DEF:0 "$OVERLORDADJ$委任統治領トランスヨルダン・ハシミテ王国"
+ TRANSJORDAN_hashemite_kingdom_mandated_territory_A_ADJ:0 "$OVERLORDADJ$委任統治領トランスヨルダン"
 #ヨーロッパ
  GALandLOD_kingdom_AUS_empire:0 "ガリツィア及びロドメリア王国及びクラカウ大公国並びにアウシュヴィッツ及びザルト公国"
  GALandLOD_kingdom_AUS_empire_DEF:0 "ガリツィア及びロドメリア王国及びクラカウ大公国並びにアウシュヴィッツ及びザルト公国"
