--- a/localisation/english/generic/_geacps_political_tab_l_english.yml
+++ b/localisation/english/generic/_geacps_political_tab_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
+##政治タブ
 #政府形態
  government_forms:0 "政府形態"
- power_structure:0 "国家体制"
- power_source:0 "社会体制"
- power_ideology:0 "統治体制"
+ national_system:0 "国家体制"
+ political_system:0 "政治体制"
  
 #内閣
  cabinet:0 "内閣"
@@ -29,17 +29,27 @@
 #その他
  company_category:0 "企業"
 
+##政治アイディア
 #国家体制
- anarchy:0 "無政府"
- confederation_state:0 "連合国家"
- unitary_state:0 "単一国家"
- federation_state:0 "連邦国家"
-
-#社会体制
+ monarchy_unitary_state:0 "君主制単一国家"
+ monarchy_federal_state:0 "君主制連邦国家"
+ republic_unitary_state:0 "共和制単一国家"
+ republic_federal_state:0 "共和制連邦国家"
+ unitary_dependent_territory:0 "単一属領"
+ federal_dependent_territory:0 "連邦属領"
  
-#統治体制
- monarchy:0 "君主制"
- republic:0 "共和制"
+#政治体制
+ parliamentary_cabinet_system:0 "議院内閣体制"
+ presidential_system:0 "大統領制"
+ semi_presidential_system:0 "半大統領制"
+ monarch_dictatorial_system:0 "君主独裁体制"
+ civilian_dictatorial_system:0 "文民独裁体制"
+ military_dictatorial_system:0 "軍部独裁体制"
+ committee_system:0 "委員会体制"
+ imperial_rule_assistance_system:0 "翼賛体制"
+ dependent_territory_direct_rule_system:0 "属領直接統治体制"
+ dependent_territory_indirect_rule_system:0 "属領間接統治体制"
+ provisional_government:0 "臨時政府"
  
 #経済法
  non_market_economics:0 "非市場経済"
