--- a/localisation/english/_map/countries_cosmetic_l_english.yml
+++ b/localisation/english/_map/countries_cosmetic_l_english.yml
@@ -145,6 +145,10 @@
  YELLOWRUSSIA_republic_ADJ:0 "黄ロシア"
  
 #ヨーロッパ
+ AOS_state_government:0 "ヴァッレ・ダオスタ州政府"
+ AOS_state_government_DEF:0 "ヴァッレ・ダオスタ州政府"
+ AOS_state_government_ADJ:0 "ヴァッレ・ダオスタ"
+ 
  AUS-HUN_monarchy:0 "オーストリア諸邦ならびに神聖なるハンガリーのイシュトヴァーン王冠の諸邦"
  AUS-HUN_monarchy_DEF:0 "オーストリア諸邦ならびに神聖なるハンガリーのイシュトヴァーン王冠の諸邦"
  AUS-HUN_monarchy_ADJ:0 "オーストリア＝ハンガリー"
@@ -400,6 +404,10 @@
  PORandBRA_united_kingdom:0 "ポルトガル及びブラジル連合王国"
  PORandBRA_united_kingdom_DEF:0 "ポルトガル及びブラジル連合王国"
  PORandBRA_united_kingdom_ADJ:0 "ポルトガル・ブラジル"
+ 
+ RHI_state_government:0 "ラインラント州政府"
+ RHI_state_government_DEF:0 "ラインラント州政府"
+ RHI_state_government_ADJ:0 "ラインラント"
  
  RUSandBLR_union_state:0 "ロシア及びベラルーシ連合国"
  RUSandBLR_union_state_DEF:0 "ロシア及びベラルーシ連合国"
