--- a/localisation/english/countries_europe/geacps_SAR_l_english.yml
+++ b/localisation/english/countries_europe/geacps_SAR_l_english.yml
@@ -14,3 +14,7 @@
  SAR.0.d:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
  SAR.0.a:0 "フランスによる新体制"
  SAR.0.b:0 "「かつての故郷への復帰」"
+ 
+ SAR.1.t:0 "1955年アオスタ独立"
+ SAR.1.d:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
+ SAR.1.a:0 "「かつての故郷への復帰」"
