--- a/localisation/english/countries_europe/geacps_RHI_l_english.yml
+++ b/localisation/english/countries_europe/geacps_RHI_l_english.yml
@@ -15,6 +15,12 @@
  RHI.0.a:0 "フランスによる新体制"
  RHI.0.b:0 "「かつての故郷への復帰」"
  
- RHI.1.t:0 "1955年アオスタ独立"
- RHI.1.d:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
- RHI.1.a:0 "「かつての故郷への復帰」"
+ news.3.t:0 "1955年ラインラント独立住民投票"
+ news.3.d:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
+ news.3.a:0 "フランスの影響力はどの位だ...？"
+ news.4.t:0 "ラインラントはフランスの庇護下に留まる"
+ news.4.d:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
+ news.4.a:0 "「かつての故郷への復帰」"
+ news.5.t:0 "1955年ラインラント独立"
+ news.5.d:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
+ news.5.a:0 "「かつての故郷への復帰」"
