--- a/localisation/english/_map/_geacps_victory_points_l_english.yml
+++ b/localisation/english/_map/_geacps_victory_points_l_english.yml
@@ -17,6 +17,7 @@
  VICTORY_POINTS_12031:0 "神戸"
  VICTORY_POINTS_13237:0 "デュッセルドルフ"
  
+ VICTORY_POINTS_415:0 "ペチョールィ"
  VICTORY_POINTS_7565:0 "マルダ"
  VICTORY_POINTS_12395:0 "シロン"
  VICTORY_POINTS_1497:0 "トゥラ"
