--- a/localisation/english/countries_europe/geacps_AOS_l_english.yml
+++ b/localisation/english/countries_europe/geacps_AOS_l_english.yml
@@ -16,11 +16,11 @@
  AOS.0.b:0 "「かつての故郷への復帰」"
  
  news.0.t:0 "1955年アオスタ独立住民投票"
- news.0.d:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
+ news.0.desc:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
  news.0.a:0 "フランスの影響力はどの位だ...？"
  news.1.t:0 "アオスタはフランスの庇護下に留まる"
- news.1.d:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
+ news.1.desc:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
  news.1.a:0 "「かつての故郷への復帰」"
  news.2.t:0 "1955年アオスタ独立"
- news.2.d:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
+ news.2.desc:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
  news.2.a:0 "「かつての故郷への復帰」"
