--- a/localisation/english/countries_europe/geacps_SAR_l_english.yml
+++ b/localisation/english/countries_europe/geacps_SAR_l_english.yml
@@ -16,11 +16,11 @@
  SAR.0.b:0 "「かつての故郷への復帰」"
  
  news.6.t:0 "1955年ザール独立住民投票"
- news.6.d:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
+ news.6.desc:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
  news.6.a:0 "フランスの影響力はどの位だ...？"
  news.7.t:0 "ザールはフランスの庇護下に留まる"
- news.7.d:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
+ news.7.desc:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
  news.7.a:0 "「かつての故郷への復帰」"
  news.8.t:0 "1955年ザール独立"
- news.8.d:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
+ news.8.desc:0 "欧州での大戦争が終わった後、この土地はフランスの庇護下に置かれた。\nフランスは旧支配者の影響を取り除こうと、親ドイツ政党を禁止している。\n我々には選択肢が二つある。一つがフランスによる新体制を支持するか、\nもう一つは「かつての故郷への復帰」を支持するかである。"
  news.8.a:0 "「かつての故郷への復帰」"
