ソビエト構成国の変更及びステート分割

--- a/localisation/english/_map/_geacps_state_names_l_english.yml
+++ b/localisation/english/_map/_geacps_state_names_l_english.yml
@@ -1334,3 +1334,9 @@
  STATE_1333:0 "メリリャ"
  STATE_1334:0 "タンジェ"
  STATE_1335:0 "ペチョールィ"
+ STATE_1336:0 "ガガウズ"
+ STATE_1337:0 "ブルカネシュティ"
+ STATE_1338:0 "トランスニストリア"
+ STATE_1339:0 "ツヒンヴァリ"
+ STATE_1340:0 "ノヴァヤゼムリャ"
+ STATE_1341:0 "ヤンマイエン島"
